fix: navigation bar align center

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center;
   padding: 50px;
 }
 
